# Tuiporal

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  config.rs  events.rs  main.rs
src/temporal/: client.rs  mod.rs
src/ui/: mod.rs
src/ui/screens/: help.rs  mod.rs  namespaces.rs  workflow_detail.rs  workflows.rs
